deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-foo
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host:  a1eb38b2f404442779cb492ec2bdc902-1677527282.us-west-2.elb.amazonaws.com 
    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: server-foo
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-bar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host:  a1eb38b2f404442779cb492ec2bdc902-1677527282.us-west-2.elb.amazonaws.com 
    http:
      paths:
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: server-bar
            port:
              number: 8080
---
